using UnityEngine;

public static class AnimationStrings
{
    public static readonly int Walk = Animator.StringToHash("Walk");
    public static readonly int Run = Animator.StringToHash("Run");
    public static readonly int Air = Animator.StringToHash("Air");
    public static readonly int VelocityY = Animator.StringToHash("VelocityY");
}
